test/scc/expr/semantic-errors/162.t
struct
{
	int b;
	struct
	{
		int a;
	};
} c = {{ .a = 10 }};